phone number wrap fixed

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -16,6 +16,7 @@
   }
 
   &__info-link {
+    white-space: nowrap;
     color: inherit;
     text-decoration: none;
 
